[package]
name = "ralqlator"
version = "0.3.1"
edition = "2021"
build = "build.rs"

[build-dependencies]
chrono = "0.4"                 # Date/time handling for build script

[dependencies]
# CLI and REPL
clap = { version = "4.4", features = ["derive"] }
rustyline = "14.0"

# Mathematical libraries
num = "0.4"                    # General number traits and utilities
num-traits = "0.2"             # Numeric traits
num-bigint = "0.4"             # BigInt and BigUint for arbitrary precision integers
num-rational = "0.4"           # Rational number support
statrs = "0.17"                # Statistical functions and special functions

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
criterion = "0.5"              # Benchmarking framework

[[bench]]
name = "calculator_bench"
harness = false
