[package]
name = "ralqlator-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.ralqlator]
path = ".."

[[bin]]
name = "parse_expression"
path = "fuzz_targets/parse_expression.rs"
test = false
doc = false

[workspace]
members = ["."]
